--- a/Contact Page/Contact_Page.html
+++ b/Contact Page/Contact_Page.html
@@ -4,14 +4,20 @@
 <head>
 <title>
 Contact Us
+	 <li><a href="myumbc.html" title="myumbc">myUMBC</a></li>
+	 <li><a href="Inquire.html" title="Inquire">Inquire</a></li>
+	 <li><a href="Apply.html" title="Apply">Apply</a></li>
 </title>
 </head>
 
 <body>
 			<ul>
                 <li><a href="Home.html" title="homepage">Home</a></li>
-                <li><a href="Information System.html" title="Information System">InformationSystem</a></li>
-                <li><a href="ContactUs.html" title="Contact Us">Contact Us</a></li>
+                <li><a href="About.html" title="About">About</a></li>
+                <li><a href="Programs.html" title="Programs">Programs</a></li>
+		<li><a href="Impact.html" title="Impact">Impact</a></li>
+		<li><a href="Faculty.html" title="Faculty">Faculty</a></li>
+		<li><a href="Research.html" title="Research">Research</a></li>
                 <li class="float-right"><input class="search" type="text" name="search" /></li>
             </ul>
 <h1>
